// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selected NavBarItem has additional className 1`] = `
<div>
  <a
    class="link"
    href="/"
  >
    <div
      class="navBarItem selected"
    >
      <div
        class="navBarItem__image"
      />
      <p
        class="navBarItem__text"
      >
        Dashboard
      </p>
    </div>
  </a>
</div>
`;

exports[`renders the NavBarItem 1`] = `
<div>
  <a
    class="link"
    href="/"
  >
    <div
      class="navBarItem"
    >
      <div
        class="navBarItem__image"
      />
      <p
        class="navBarItem__text"
      >
        Dashboard
      </p>
    </div>
  </a>
</div>
`;
